--- a/angular/src/app/pages/accueil/accueil.component.html
+++ b/angular/src/app/pages/accueil/accueil.component.html
@@ -1,1 +1,28 @@
-<p>accueil works!</p>
+<div *ngIf="tests">
+    <ul>
+        <li *ngFor="let t of tests">
+            <div>
+                <h1>{{t.title}}</h1>
+                <img [src]="t.cover">
+                <ul>
+                    <li *ngFor="let c of t.consoles">
+                        {{c}}
+                    </li>
+                </ul>
+                <ul>
+                    <li *ngFor="let g of t.genres">
+                        {{g}}
+                    </li>
+                </ul>
+                {{t.resume}}
+                {{t.note}}
+                {{t.author}}
+                <ul>
+                    <li *ngFor="let v of t.upVotes">
+                        {{v}}
+                    </li>
+                </ul>
+            </div>
+        </li>
+    </ul>
+</div>
