--- a/angular/src/app/pages/connexion/enregistrement/enregistrement.component.html
+++ b/angular/src/app/pages/connexion/enregistrement/enregistrement.component.html
@@ -1,6 +1,11 @@
-<h2>Connexion</h2>
+<h2>Enregistrement</h2>
 
 <form (ngSubmit)="onSubmit()">
+  <div>
+    <label for="pseudo">Pseudo :</label>
+    <input type="text" id="pseudo" name="pseudo" [(ngModel)]="pseudo" required>
+  </div>
+  
   <div>
     <label for="email">Adresse e-mail :</label>
     <input type="email" id="email" name="email" [(ngModel)]="email" required>
@@ -11,6 +16,5 @@
     <input type="password" id="password" name="password" [(ngModel)]="password" required>
   </div>
   
-  <button type="submit">Se connecter</button>
-  <a [routerLink]="'/enregistrement'">S'enregistrer</a>
+  <button type="submit">S'enregistrer</button>
 </form>
