ajout profil & modification profil

--- a/angular/src/app/pages/profil/profil.component.html
+++ b/angular/src/app/pages/profil/profil.component.html
@@ -1,1 +1,9 @@
-<p>profil works!</p>
+<div *ngIf="userProfile">
+    <h2>{{ userProfile.login }}</h2>
+    <img [src]="userProfile.avatar" alt="Avatar">
+    <p>{{ userProfile.mail }}</p>
+    <p>{{ userProfile.bio }}</p>
+    <p>{{ userProfile.rank }}</p>
+    <button routerLink="/profile/edit">Modifier</button>
+    <button (click)="logout()">Se déconnecter</button>
+  </div>
