--- a/angular/src/app/pages/profil-edit/profil-edit.component.html
+++ b/angular/src/app/pages/profil-edit/profil-edit.component.html
@@ -1,28 +1,41 @@
 <form (ngSubmit)="submitForm()" #profileForm="ngForm">
-    <div>
-      <label for="avatar">Avatar</label>
-      <input type="text" id="avatar" name="avatar" [(ngModel)]="userProfile.avatar" required>
+  <div>
+    <label for="avatar">Avatar</label>
+    <!-- <input type="text" id="avatar" name="avatar" [(ngModel)]="userProfile.avatar" required> -->
+    <div class="cropped-image">
+      <img [src]="croppedImage">
     </div>
     <div>
-      <label for="login">Login</label>
-      <input type="text" id="login" name="login" [(ngModel)]="userProfile.login" required>
+      <input type="file" (change)="fileChangeEvent($event)">
     </div>
-    <div>
-      <label for="mail">Mail</label>
-      <input type="email" id="mail" name="mail" [(ngModel)]="userProfile.mail" required>
+    <div class="cropper">
+      <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="1 / 1"
+        format="jpeg" (imageCropped)="imageCropped($event)" output="base64"></image-cropper>
     </div>
-    <div>
-      <label for="bio">Bio</label>
-      <textarea id="bio" name="bio" [(ngModel)]="userProfile.bio" maxlength="{{ bioMaxLength }}" required></textarea>
-      <div class="character-count">{{ userProfile.bio.length }}/{{ bioMaxLength }} caractères</div>
-    </div>
-    <div>
-      <label for="oldPassword">Ancien mot de passe</label>
-      <input type="password" id="oldPassword" name="oldPassword" [(ngModel)]="oldPassword" required>
-    </div>
-    <div>
-      <label for="newPassword">Nouveau mot de passe (optionnel)</label>
-      <input type="password" id="newPassword" name="newPassword" [(ngModel)]="newPassword">
-    </div>
-    <button type="submit">Modifier</button>
-  </form>
+    <!-- <div>
+      <button type="submit" class="p-button p-button-raised p-button-info" pButton>Save</button>
+    </div> -->
+  </div>
+  <div>
+    <label for="login">Login</label>
+    <input type="text" id="login" name="login" [(ngModel)]="userProfile.login" required>
+  </div>
+  <div>
+    <label for="mail">Mail</label>
+    <input type="email" id="mail" name="mail" [(ngModel)]="userProfile.mail" required>
+  </div>
+  <div>
+    <label for="bio">Bio</label>
+    <textarea id="bio" name="bio" [(ngModel)]="userProfile.bio" maxlength="{{ bioMaxLength }}" required></textarea>
+    <div class="character-count">{{ userProfile.bio.length }}/{{ bioMaxLength }} caractères</div>
+  </div>
+  <div>
+    <label for="oldPassword">Ancien mot de passe</label>
+    <input type="password" id="oldPassword" name="oldPassword" [(ngModel)]="oldPassword" required>
+  </div>
+  <div>
+    <label for="newPassword">Nouveau mot de passe (optionnel)</label>
+    <input type="password" id="newPassword" name="newPassword" [(ngModel)]="newPassword">
+  </div>
+  <button type="submit">Modifier</button>
+</form>
