--- a/angular/src/app/pages/profil/profil.component.html
+++ b/angular/src/app/pages/profil/profil.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="userProfile">
     <h2>{{ userProfile.login }}</h2>
+    {{userProfile.id}}
     <img [src]="userProfile.avatar" alt="Avatar">
     <p>{{ userProfile.mail }}</p>
     <p>{{ userProfile.bio }}</p>
     <p>{{ userProfile.rank }}</p>
     <button routerLink="/profile/edit">Modifier</button>
-    <button (click)="logout()">Se déconnecter</button>
   </div>
