--- a/angular/src/app/pages/liste-abonnes/abonnes/abonnes/abonnes.component.html
+++ b/angular/src/app/pages/liste-abonnes/abonnes/abonnes/abonnes.component.html
@@ -2,7 +2,18 @@
     {{user.login}}
 </h1>
 <img [src]="user.avatar">
-{{user.rank}}
+<div>
+    {{user.rank.rank}}
+</div><div *ngIf="isAllowed">
+    <div>
+        Changer le rang
+        <select [(ngModel)]="selectedRank" (change)="onRankSelected()">
+            <option *ngFor="let r of ranks" [value]="r.id">
+                {{ r.rank }}
+            </option>
+        </select>
+    </div>
+</div>
 <p>
     {{user.bio}}
 </p>
