--- a/angular/src/app/pages/profil/profil.component.html
+++ b/angular/src/app/pages/profil/profil.component.html
@@ -4,6 +4,6 @@
     <img [src]="userProfile.avatar" alt="Avatar">
     <p>{{ userProfile.mail }}</p>
     <p>{{ userProfile.bio }}</p>
-    <p>{{ userProfile.rank }}</p>
+    <p>{{ userProfile.rank.rank }}</p>
     <button routerLink="/profile/edit">Modifier</button>
   </div>
