--- a/angular/src/app/pages/liste-abonnes/liste-abonnes.component.html
+++ b/angular/src/app/pages/liste-abonnes/liste-abonnes.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li *ngFor="let a of abonnes">
+    <li *ngFor="let a of abonnes" [class.inactif]="a.deletedAt">
         <a [routerLink]="['../abonnes', a.id]">
             <h1>{{a.login}}</h1>
             <img [src]="a.avatar | defaultImage">
