--- a/angular/src/app/pages/liste-abonnes/abonnes/abonnes.component.html
+++ b/angular/src/app/pages/liste-abonnes/abonnes/abonnes.component.html
@@ -1,21 +1,24 @@
-<h1>
-    {{user.login}}
-</h1>
-<img [src]="user.avatar">
-<div>
-    {{user.rank.rank}}
-</div><div *ngIf="isAllowed">
+<div *ngIf="user">
+    <h1>
+        {{user.login}}
+    </h1>
+    <img [src]="user.avatar | defaultAvatar">
     <div>
-        Changer le rang
-        <select [(ngModel)]="selectedRank" (change)="onRankSelected()">
-            <option *ngFor="let r of ranks" [value]="r.id">
-                {{ r.rank }}
-            </option>
-        </select>
-        <button (click)="disableUser()" *ngIf="!user.deletedAt">Désactiver</button>
-        <button (click)="reenableUser()" *ngIf="user.deletedAt">Réactiver</button>
+        {{user.rank.rank}}
     </div>
+    <div *ngIf="isAllowed">
+        <div>
+            Changer le rang
+            <select [(ngModel)]="selectedRank" (change)="onRankSelected()">
+                <option *ngFor="let r of ranks" [value]="r.id">
+                    {{ r.rank }}
+                </option>
+            </select>
+            <button (click)="disableUser()" *ngIf="!user.deletedAt">Désactiver</button>
+            <button (click)="reenableUser()" *ngIf="user.deletedAt">Réactiver</button>
+        </div>
+    </div>
+    <p>
+        {{user.bio}}
+    </p>
 </div>
-<p>
-    {{user.bio}}
-</p>
